# plan2d

./: .gitignore  CMakeLists.txt  README.md  doxyfile
.github/workflows/: build.yml
docs/: CMakeLists.txt  Doxyfile  algorithms.rst  conf.py  datastructures.rst  index.rst  requirements.txt  usage.rst
docs/_static/js/: matomo.js
include/bimpp/: plan2d.hpp
src/: CMakeLists.txt  demo.cpp  plan2d.cpp
