cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

project(plan2d)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_cmake")

set(BIMPP_PLAN2D_PATH_ROOT ${CMAKE_SOURCE_DIR})
set(BIMPP_PLAN2D_PATH_EXTERNALS ${CMAKE_SOURCE_DIR}/externals)
set(BIMPP_PLAN2D_PATH_DOCS ${CMAKE_SOURCE_DIR}/docs)
set(BIMPP_PLAN2D_PATH_INC ${CMAKE_SOURCE_DIR}/include)
set(BIMPP_PLAN2D_PATH_SRC ${CMAKE_SOURCE_DIR}/src)
set(BIMPP_PLAN2D_PATH_OUTPUT ${CMAKE_SOURCE_DIR}/output)
set(BIMPP_PLAN2D_PATH_OUTPUT_INC ${BIMPP_PLAN2D_PATH_OUTPUT}/include)
set(BIMPP_PLAN2D_PATH_OUTPUT_BIN ${BIMPP_PLAN2D_PATH_OUTPUT}/bin)
set(BIMPP_PLAN2D_PATH_OUTPUT_LIB ${BIMPP_PLAN2D_PATH_OUTPUT}/lib)

find_package(Boost REQUIRED)

set(BIMPP_PLAN2D_PATH_SRC_FILE_LIST
    ${BIMPP_PLAN2D_PATH_INC}/bimpp/plan2d.hpp
    )

add_subdirectory(docs)
add_subdirectory(src)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT demo)
